--- a/style.css
+++ b/style.css
@@ -1,6 +1,115 @@
 
-.top {
-    background-color:black;
-    color: white;
-    align-items: center;
+body {
+    background-color: papayawhip;
+    font-family:'Arial Narrow';
+}
+/* starting */
+#welcome {
+    display:block;
+}
+#first_q {
+    display:none;
+}
+
+#second_q {
+    display:none;
+}
+#third_q {
+    display:none;
+}
+#fourth_q {
+    display:none;
+}
+#fifth_q {
+    display:none;
+}
+#sixth_q {
+    display:none;
+}
+#ending {
+    display:none;
+}
+
+#top{
+    text-align: center;
+}
+#desc{
+    text-align: center;
+}
+
+#homemiddle{
+    text-align: center;
+}
+
+.reference{
+    text-align: center;
+}
+
+.middles{
+    text-align:center;
+}
+.picturr{
+    margin-bottom: 20px;
+}
+
+.btn {
+  background-color: #f78deb;
+  border-radius: 3px;
+  border: 1px solid #ffffff;
+  box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: #fefeff;
+  color: #2c5777;
+}
+
+.btn:focus {
+  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.15);
+}
+
+.btn:active {
+  background-color: #ffffff;
+  box-shadow: none;
+  color: #2c5777;
+}
+
+
+#foot{
+    background-color:greenyellow;
+    color: black;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    animation-name:blink;
+    animation-duration:1s;
+    animation-timing-function:ease-in;
+    animation-iteration-count:Infinite;
+    padding: 20px;
+}
+@keyframes blink{
+    0%{color:black;}
+    50%{color:white;}
+    100%{color:black;}
 }
